Fix WaveHeader covering AuthDialog (#171)
* Fix WaveHeader covering AuthDialog

* Fix wave header for narrower viewports

* Remove WaveHeader on mobile landscape

--- a/src/components/design/WaveHeader/index.module.scss
+++ b/src/components/design/WaveHeader/index.module.scss
@@ -6,6 +6,10 @@
   width: 100%;
   overflow: hidden;
   line-height: 0;
+
+  @include height-down($breakpoint-sm) {
+    display: none;
+  }
 }
 
 .title {
@@ -17,12 +21,15 @@
 
   color: $text-color-contrast;
 
+  @include down($breakpoint-md) {
+    top: 40px;
+  }
+
   @include down($breakpoint-sm) {
-    top: 50px;
+    top: 40px;
   }
 
   @include down($breakpoint-xs) {
-    top: 40px;
     left: 30px;
   }
 }
@@ -35,8 +42,12 @@
   top: 140px;
   left: 60px;
 
-  @include down($breakpoint-sm) {
+  @include down($breakpoint-md) {
     top: 90px;
+  }
+
+  @include down($breakpoint-sm) {
+    top: 80px;
   }
 
   @include down($breakpoint-xs) {
@@ -51,8 +62,16 @@
   height: 250px;
   filter: $drop-shadow;
 
+  @include down($breakpoint-lg) {
+    height: 220px;
+  }
+
+  @include down($breakpoint-md) {
+    height: 150px;
+  }
+
   @include down($breakpoint-sm) {
-    height: 170px;
+    height: 140px;
   }
 
   @include down($breakpoint-xs) {
@@ -61,9 +80,9 @@
 }
 
 .waveSvgStart {
-  stop-color: $wave-gradient-color-start;
+  stop-color: $wave-gradient-color-end;
 }
 
 .waveSvgEnd {
-  stop-color: $wave-gradient-color-end;
+  stop-color: $wave-gradient-color-start;
 }
